@@ -2,6 +2,7 @@
 
 * Fat Zebra: More consistent handling of tokens [adrianmacneil]
 * Add Platron integration [alexwl]
+* Litle: Support wiredump_device [pierre]
 
 == Version 1.35.1 (July 22, 2013)
 
